bloomberg foundation name switch

--- a/english.html
+++ b/english.html
@@ -181,7 +181,7 @@
 
                                     <h3>The co-funding :</h3>
                                     <p class="subtitle">Program co-funded by the municipalities/regions engaged in La
-                                        Transfo and Bloomberg Philanthropies
+                                        Transfo and the financing of a private foundation
                                     </p>
 
                                 </div>
