--- a/faq-english.html
+++ b/faq-english.html
@@ -98,7 +98,7 @@
                         the diversity of professions of a public administration. This experimental program was conducted
                         from 2016 to 2020 in partnership with seven public authorities (the cities of Mulhouse, Paris,
                         Dunkirk and surrounding urban area, the Metropolis of Lille, Strasbourg, Metz and the Region of
-                        Occitanie), and was co-funded by the Bloomberg Philanthropies Foundation. In each city/region, a
+                        Occitanie), and was co-funded by Bloomberg Philanthropies. In each city/region, a
                         multi-disciplinary team of three or four persons, the “residents”, led two- to three-day work
                         sessions every month with the public agents for a 16- to 18-month period. The sessions were
                         focused on practical cases based on real issues encountered in the city/region; these served as
