--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,7 @@
                         administration publique. Ce programme expérimental a été mené de 2016 à 2020 en partenariat
                         avec sept collectivités (les Villes de Mulhouse et Paris, la Communauté urbaine de
                         Dunkerque, les Métropoles de Lille, Strasbourg et Metz et la Région Occitanie) et avec le
-                        soutien de la fondation Bloomberg Philanthropies. Dans chaque collectivité, une équipe
+                        soutien de Bloomberg Philanthropies. Dans chaque collectivité, une équipe
                         pluridisciplinaire de trois à quatre personnes (“les résidents”) anime des sessions de
                         travail de deux à trois jours consécutifs par mois avec les agents, pendant 16 à 18 mois.
                         Ces sessions portent sur des cas pratiques, partant de vrais problématiques de la
