--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                                 <div class="container">
 
                                     <h3>Le co-financement du programme</h3>
-                                    <p class="subtitle">par les collectivités engagées dans La Transfo et Bloomberg
-                                        Philanthropies
+                                    <p class="subtitle">par les collectivités engagées dans La Transfo et le financement
+                                        d’une fondation privée
                                     </p>
 
                                 </div>
